--- a/index.html
+++ b/index.html
@@ -1,24 +1,176 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hockey Buzz</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hockey Buzz</title>
+  <!-- Tailwind and daisy Ui links -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- manrope google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- font awesome script -->
+  <script src="https://kit.fontawesome.com/9bc8175cbc.js" crossorigin="anonymous"></script>
+
+  <!-- Tailwind custom colors -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'primary-color': '#131318',
+            'text-color': '#FF4240',
+            'hockey-bg': '#FF4240',
+          }
+        }
+      }
+    }
+  </script>
+  <style>
+    .font-manrope {
+      font-family: 'Manrope', sans-serif;
+
+    }
+  </style>
 </head>
 
-<body>
-    <header class="container mx-auto">
+<body class="font-manrope">
+  <header class="container mx-auto">
+    <nav>
+      <div class="navbar bg-base-100">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+              </svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-2xl lg:text-4xl font-extrabold">Hockey
+            <span class="text-text-color">Buzz</span>
+          </a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal text-base  px-1">
+            <li><a class="hover:text-text-color ">Home</a></li>
+            <li><a class="hover:text-text-color ">About</a></li>
+            <li><a class="hover:text-text-color ">Pages</a></li>
+            <li><a class="hover:text-text-color ">Blog</a></li>
+            <li><a class="hover:text-text-color ">Contact</a></li>
+          </ul>
+        </div>
 
-    </header>
-    <main class="container mx-auto">
+        <div class="navbar-end">
+          <ul class=" pr-6">
+            <li>
+              <a><i class="hidden lg:block fa-solid fa-magnifying-glass w-[24px] text-gray-300"></i></a>
+            </li>
+          </ul>
+          <a class="btn bg-hockey-bg text-white text-xl font-bold">Get Ticket</a>
+        </div>
+      </div>
+    </nav>
+    <!-- Slider or Carousel -->
+    <div class="mt-12 relative mx-5 lg:mx-auto">
+      <div class="carousel w-full lg:h-[550px] ">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="Images/1.png" class="w-full bg-no-repeat bg-cover bg-center" />
+          <div
+            class="justify-center lg:justify-start absolute gap-4  flex transform -translate-y-1/2 left-10 right-5 bottom-2 lg:bottom-10">
+            <a href="#slide4" class="btn btn-circle bg-black border-none  text-white">❮</a>
+            <a href="#slide2" class="btn btn-circle bg-black border-none  text-white">❯</a>
 
-    </main>
-    <footer>
+          </div>
+        </div>
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="Images/banner-2.png" class="w-full rounded-xl" />
+          <div
+            class="justify-center lg:justify-start absolute gap-4 flex  transform -translate-y-1/2 left-10 right-5 bottom-10">
+            <a href="#slide1" class="btn btn-circle bg-black border-none  text-white">❮</a>
+            <a href="#slide3" class="btn btn-circle bg-black border-none  text-white">❯</a>
+          </div>
+        </div>
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="Images/banner-3.png" class="w-full rounded-xl" />
+          <div
+            class="justify-center lg:justify-start absolute gap-4 flex transform -translate-y-1/2 left-10 right-5 bottom-10">
+            <a href="#slide2" class="btn btn-circle bg-black border-none  text-white">❮</a>
+            <a href="#slide1" class="btn btn-circle bg-black border-none  text-white">❯</a>
+          </div>
+        </div>
 
-    </footer>
+      </div>
+      <div class="hidden lg:block bg-primary-color rounded-xl w-[566px] absolute bottom-10 right-10 ">
+        <div class="p-8">
+          <h2 class="text-2xl text-white font-extrabold">Meet all the heroes from the field</h2>
+          <p class="font-medium text-gray-400 text-base mt-4">Dit amet consectetur. Condimentum dignissim adipiscing
+            aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+      <div class="lg:hidden block bg-primary-color rounded-lg mt-4">
+        <div class="p-4">
+          <h2 class="text-lg text-white font-extrabold">Meet all the heroes from the field</h2>
+          <p class="font-medium text-gray-400 text-sm mt-4">Dit amet consectetur. Condimentum dignissim adipiscing
+            aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+    </div>
+
+
+  </header>
+  <main class="container mx-auto">
+    <!-- professionals Club -->
+    <section class="my-24 text-center ">
+      <div class="flex justify-center">
+        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl lg:text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h1>
+          <p class="lg:px-44 text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur. Condimentum
+            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+      <!-- radial progress -->
+      <div class="mt-20 grid grid-cols-1 lg:grid-cols-4 gap-8 mx-5 lg:mx-auto">
+        <div>
+          <div class="radial-progress" style="--value:87; color: #FF4240;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">87%</span></div>
+          <h2 class="text-primary-color font-semibold text-xl mt-4">Prayer Facility</h2>
+          <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+        <div>
+          <div class="radial-progress" style="--value:87; color: #49D293;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">95%</span></div>
+          <h2 class="text-primary-color font-semibold text-xl mt-4">Experienced Coach </h2>
+          <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+        <div>
+          <div class="radial-progress" style="--value:87; color: #FFB546;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">90%</span></div>
+          <h2 class="text-primary-color font-semibold text-xl mt-4">Senior Player </h2>
+          <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+        <div>
+          <div class="radial-progress" style="--value:87; color: #4C8DF1;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">80%</span></div>
+          <h2 class="text-primary-color font-semibold text-xl mt-4">Training Ground </h2>
+          <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+      </div>
+
+    </section>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
