completed beautiful cart section

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     </nav>
     <!-- Slider or Carousel -->
     <div class="mt-12 relative mx-5 lg:mx-auto">
-      <div class="carousel w-full lg:h-[550px] ">
+      <div class="carousel  bg-blend-darken w-full lg:h-[550px] ">
         <div id="slide1" class="carousel-item relative w-full">
-          <img src="Images/1.png" class="w-full bg-no-repeat bg-cover bg-center" />
+          <img src="Images/1.png" class="w-full " />
           <div
             class="justify-center lg:justify-start absolute gap-4  flex transform -translate-y-1/2 left-10 right-5 bottom-2 lg:bottom-10">
             <a href="#slide4" class="btn btn-circle bg-black border-none  text-white">❮</a>
@@ -144,24 +144,345 @@
       <!-- radial progress -->
       <div class="mt-20 grid grid-cols-1 lg:grid-cols-4 gap-8 mx-5 lg:mx-auto">
         <div>
-          <div class="radial-progress" style="--value:87; color: #FF4240;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">87%</span></div>
+          <div class="radial-progress rotate-[130deg]" style="--value:87; color: #FF4240;--size:10rem"
+            role="progressbar"><span class="-rotate-[130deg] text-3xl font-bold text-primary-color">87%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Prayer Facility</h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
         <div>
-          <div class="radial-progress" style="--value:87; color: #49D293;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">95%</span></div>
+          <div class="radial-progress rotate-[100deg]" style="--value:95; color: #49D293;--size:10rem"
+            role="progressbar"><span class="-rotate-[100deg] text-3xl font-bold text-primary-color">95%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Experienced Coach </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
         <div>
-          <div class="radial-progress" style="--value:87; color: #FFB546;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">90%</span></div>
+          <div class="radial-progress rotate-[130deg]" style="--value:90; color: #FFB546;--size:10rem"
+            role="progressbar"><span class="-rotate-[130deg] text-3xl font-bold text-primary-color">90%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Senior Player </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
         </div>
         <div>
-          <div class="radial-progress" style="--value:87; color: #4C8DF1;--size:10rem" role="progressbar"><span class="text-3xl font-bold text-primary-color">80%</span></div>
+          <div class="radial-progress rotate-[160deg]" style="--value:80; color: #4C8DF1;--size:10rem"
+            role="progressbar"><span class=" -rotate-[160deg] text-3xl font-bold text-primary-color">80%</span></div>
           <h2 class="text-primary-color font-semibold text-xl mt-4">Training Ground </h2>
           <p class="text-base text-gray-500  mt-4">Amet consectetur. Condimentum dignissim adipiscing .</p>
+        </div>
+      </div>
+
+    </section>
+    <!-- Program section -->
+    <section class="my-24">
+      <div class="flex justify-center">
+        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Program Sections</h1>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
+            Condimentum
+            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+      <div class="flex flex-col lg:flex-row gap-8 justify-center mt-10 mx-5 lg:mx-auto ">
+        <div
+          class="lg:w-1/2 rounded-xl bg-[url('/images/2.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
+          <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
+          <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
+            assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+          <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
+            Now!</button>
+        </div>
+        <div
+          class="lg:w-1/2 rounded-xl bg-[url('/images/3.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-24 lg:pb-10 lg:px-10 bg-blend-overlay bg-[#13131880] ">
+          <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
+          <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
+            assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+          <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
+            Now!</button>
+        </div>
+
+      </div>
+      <div class="mt-8 flex justify-center mx-5 lg:mx-auto">
+        <div
+          class="w-full rounded-xl bg-[url('/images/4.png')] bg-cover bg-center bg-no-repeat py-6 pl-6 pr-8 lg:pt-48 lg:pb-10 lg:pl-10 lg:pr-96 bg-blend-overlay bg-[#13131880]">
+          <h1 class="mb-5 text-3xl font-bold text-white">Junior Program </h1>
+          <p class="mb-5 text-white text-base font-medium">Provident cupiditate voluptatem et in. Quaerat fugiat ut
+            assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+          <button class="px-5 py-3 rounded-lg bg-hockey-bg border-none text-xl font-bold text-white">Register
+            Now!</button>
+        </div>
+      </div>
+
+    </section>
+    <!-- New Products -->
+    <section class="my-24">
+      <div class="flex justify-center">
+        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Our New Products</h1>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
+            Condimentum
+            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+      <!-- All Cart are Here -->
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mx-5 lg:mx-auto">
+        <!-- first cart -->
+        <div class="mt-20 rounded-xl border-2 border-gray-200">
+          <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
+            <img src="Images/5.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <div class="mt-4">
+              <div class="flex items-center gap-4">
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#F99808] fa-solid fa-star"></i>
+                  <span>5.00</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-eye"></i>
+                  <span>20</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-heart"></i>
+                  <span>200</span>
+                </p>
+              </div>
+              <div>
+                <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
+                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
+                  sagittis.
+                </p>
+                <div class="flex items-center gap-4 mt-4">
+                  <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
+                  <p class="flex items-center gap-2 ">
+                    <i class="text-[#13131880] fa-solid fa-cart-shopping"></i>
+                    <span>Delivery Fee : Free</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--second cart  -->
+        <div class="mt-20 rounded-xl border-2 border-gray-200">
+          <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
+            <img src="Images/6.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <div class="mt-4">
+              <div class="flex items-center gap-4">
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#F99808] fa-solid fa-star"></i>
+                  <span>5.00</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-eye"></i>
+                  <span>20</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-heart"></i>
+                  <span>200</span>
+                </p>
+              </div>
+              <div>
+                <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
+                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
+                  sagittis.
+                </p>
+                <div class="flex items-center gap-4 mt-4">
+                  <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
+                  <p class="flex items-center gap-2 ">
+                    <i class="text-[#13131880] fa-solid fa-cart-shopping"></i>
+                    <span>Delivery Fee : Free</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--third cart  -->
+        <div class="mt-20 rounded-xl border-2 border-gray-200">
+          <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
+            <img src="Images/7.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <div class="mt-4">
+              <div class="flex items-center gap-4">
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#F99808] fa-solid fa-star"></i>
+                  <span>5.00</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-eye"></i>
+                  <span>20</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-heart"></i>
+                  <span>200</span>
+                </p>
+              </div>
+              <div>
+                <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
+                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
+                  sagittis.
+                </p>
+                <div class="flex items-center gap-4 mt-4">
+                  <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
+                  <p class="flex items-center gap-2 ">
+                    <i class="text-[#13131880] fa-solid fa-cart-shopping"></i>
+                    <span>Delivery Fee : Free</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- fourth cart -->
+        <div class="mt-20 rounded-xl border-2 border-gray-200">
+          <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
+            <img src="Images/8.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <div class="mt-4">
+              <div class="flex items-center gap-4">
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#F99808] fa-solid fa-star"></i>
+                  <span>5.00</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-eye"></i>
+                  <span>20</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-heart"></i>
+                  <span>200</span>
+                </p>
+              </div>
+              <div>
+                <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
+                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
+                  sagittis.
+                </p>
+                <div class="flex items-center gap-4 mt-4">
+                  <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
+                  <p class="flex items-center gap-2 ">
+                    <i class="text-[#13131880] fa-solid fa-cart-shopping"></i>
+                    <span>Delivery Fee : Free</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--fifth cart -->
+        <div class="mt-20 rounded-xl border-2 border-gray-200">
+          <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
+            <img src="Images/9.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <div class="mt-4">
+              <div class="flex items-center gap-4">
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#F99808] fa-solid fa-star"></i>
+                  <span>5.00</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-eye"></i>
+                  <span>20</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-heart"></i>
+                  <span>200</span>
+                </p>
+              </div>
+              <div>
+                <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
+                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
+                  sagittis.
+                </p>
+                <div class="flex items-center gap-4 mt-4">
+                  <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
+                  <p class="flex items-center gap-2 ">
+                    <i class="text-[#13131880] fa-solid fa-cart-shopping"></i>
+                    <span>Delivery Fee : Free</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- sixth cart -->
+        <div class="mt-20 rounded-xl border-2 border-gray-200">
+          <div class="flex flex-col lg:flex-row py-6 px-6 lg:pb-5 lg:pl-6 lg:pr-12 gap-5">
+            <img src="Images/10.png" class="lg:w-2/5 w-full rounded-lg shadow-xl" />
+            <div class="mt-4">
+              <div class="flex items-center gap-4">
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#F99808] fa-solid fa-star"></i>
+                  <span>5.00</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-eye"></i>
+                  <span>20</span>
+                </p>
+                <p class="flex items-center gap-2 ">
+                  <i class="text-[#13131880] fa-regular fa-heart"></i>
+                  <span>200</span>
+                </p>
+              </div>
+              <div>
+                <h2 class="text-xl text-primary-color font-extrabold mt-3">World Cup Flags Football</h2>
+                <p class="text-[#13131899] text-base font-medium mt-3">Dolor sit amet consectetur. Ut urna diam quis
+                  sagittis.
+                </p>
+                <div class="flex items-center gap-4 mt-4">
+                  <h3 class="text-lg text-text-color font-extrabold">Price - $22.00</h3>
+                  <p class="flex items-center gap-2 ">
+                    <i class="text-[#13131880] fa-solid fa-cart-shopping"></i>
+                    <span>Delivery Fee : Free</span>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </section>
+    <!-- Clients Questions -->
+    <section class="my-24">
+      <div class="flex justify-center">
+        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Clients Question</h1>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
+            Condimentum
+            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+      <!-- Accordion -->
+      <div class="hero min-h-screen bg-base-200">
+        <div class="hero-content flex-col lg:flex-row">
+          <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <!-- Accordian Questions and asnwer -->
+          <div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Click to open this one and close others
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+
+
+          </div>
         </div>
       </div>
 
