completed wonderful form sectionn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         extend: {
           colors: {
             clifford: '#da373d',
-            'primary-color': '#131318',
             'text-color': '#FF4240',
             'hockey-bg': '#FF4240',
           }
@@ -89,8 +88,8 @@
           <img src="Images/1.png" class="w-full " />
           <div
             class="justify-center lg:justify-start absolute gap-4  flex transform -translate-y-1/2 left-10 right-5 bottom-2 lg:bottom-10">
-            <a href="#slide4" class="btn btn-circle bg-black border-none  text-white">❮</a>
-            <a href="#slide2" class="btn btn-circle bg-black border-none  text-white">❯</a>
+            <a href="#slide4" class="btn btn-circle bg-neutral-900 border-none  text-white">❮</a>
+            <a href="#slide2" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
 
           </div>
         </div>
@@ -98,16 +97,16 @@
           <img src="Images/banner-2.png" class="w-full rounded-xl" />
           <div
             class="justify-center lg:justify-start absolute gap-4 flex  transform -translate-y-1/2 left-10 right-5 bottom-10">
-            <a href="#slide1" class="btn btn-circle bg-black border-none  text-white">❮</a>
-            <a href="#slide3" class="btn btn-circle bg-black border-none  text-white">❯</a>
+            <a href="#slide1" class="btn btn-circle bg-neutral-900 border-none  text-white">❮</a>
+            <a href="#slide3" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
           </div>
         </div>
         <div id="slide3" class="carousel-item relative w-full">
           <img src="Images/banner-3.png" class="w-full rounded-xl" />
           <div
             class="justify-center lg:justify-start absolute gap-4 flex transform -translate-y-1/2 left-10 right-5 bottom-10">
-            <a href="#slide2" class="btn btn-circle bg-black border-none  text-white">❮</a>
-            <a href="#slide1" class="btn btn-circle bg-black border-none  text-white">❯</a>
+            <a href="#slide2" class="btn btn-circle bg-neutral-900 border-none  text-white">❮</a>
+            <a href="#slide1" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
           </div>
         </div>
 
@@ -135,8 +134,8 @@
     <!-- professionals Club -->
     <section class="my-24 text-center ">
       <div class="flex justify-center">
-        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
-          <h1 class="text-xl lg:text-4xl font-extrabold text-[#131318]">Professional Hockeys Club</h1>
+        <div class="border-y-2  w-10/12  border-[#13131880]border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl lg:text-4xl font-extrabold text-neutral-900">Professional Hockeys Club</h1>
           <p class="lg:px-44 text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur. Condimentum
             dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
@@ -448,38 +447,84 @@
         </div>
       </div>
       <!-- Accordion -->
-      <div class="hero min-h-screen bg-base-200">
-        <div class="hero-content flex-col lg:flex-row">
-          <img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" />
-          <!-- Accordian Questions and asnwer -->
-          <div>
-            <div class="collapse collapse-plus bg-base-200">
+      <div class="mt-10 border-2 border-gray-200 rounded-xl p-4 lg:p-6 mx-5 lg:mx-auto ">
+        <div class="flex flex-col lg:flex-row gap-10">
+          <img src="Images/11.png" class="w-full lg:w-1/2" />
+          <!-- Accordian Questions and Answer -->
+          <div class="space-y-4 ">
+            <!-- accordian-1 -->
+            <div class="collapse collapse-plus ">
               <input type="radio" name="my-accordion-3" checked="checked" />
-              <div class="collapse-title text-xl font-medium">
-                Click to open this one and close others
+              <div class="collapse-title text-neutral-900 text-xl font-bold">
+                Our Equipment
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p class="text-[#13131899] text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                  enim sagittis turpis in magna.</p>
               </div>
             </div>
-            <div class="collapse collapse-plus bg-base-200">
-              <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">
-                Click to open this one and close others
+            <hr>
+            <!-- accordian-2 -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-neutral-900 text-xl font-bold">
+                Hockey Training
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p class="text-[#13131899] text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                  enim sagittis turpis in magna.</p>
               </div>
             </div>
-            <div class="collapse collapse-plus bg-base-200">
-              <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">
-                Click to open this one and close others
+            <hr>
+            <!-- accordian-3 -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-neutral-900 text-xl font-bold">
+                Private Lessons
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p class="text-[#13131899] text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                  enim sagittis turpis in magna.</p>
               </div>
             </div>
+            <hr>
+            <!-- accordian-4 -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-neutral-900 text-xl font-bold">
+                Ski Touring
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#13131899] text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                  enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <hr>
+            <!-- accordian-5 -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-neutral-900 text-xl font-bold">
+                Booking
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#13131899] text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                  enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+            <hr>
+            <!-- accordian-6 -->
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-neutral-900 text-xl font-bold">
+                Pricings
+              </div>
+              <div class="collapse-content">
+                <p class="text-[#13131899] text-base">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                  enim sagittis turpis in magna.</p>
+              </div>
+            </div>
+
+
 
 
           </div>
@@ -487,10 +532,122 @@
       </div>
 
     </section>
+    <!-- Get in Touch -->
+    <section class="my-24">
+      <div class="flex justify-center">
+        <div class="border-y-2 border-opacity-20 w-10/12  border-[#131318] border-dashed p-5 lg:p-10  ">
+          <h1 class="text-xl text-center lg:text-4xl font-extrabold text-[#131318]">Get In Touch</h1>
+          <p class="lg:px-44 text-center  text-sm lg:text-base text-gray-500 font-medium mt-4">Dit amet consectetur.
+            Condimentum
+            dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+      </div>
+      <div class="flex flex-col lg:flex-row gap-6 mx-5 lg:mx-auto lg:p-16">
 
+        <!-- Address -->
+        <div class="space-y-6 border-2 border-gray-200 rounded-xl p-4 lg:p-8">
+          <div class="p-8 bg-gray-100 rounded-lg ">
+            <img src="Images/Group 1171275317.png" alt="">
+            <p class="text-[#13131866] text-base mt-8">Phone Number : </p>
+            <h5 class="text-neutral-900 text-lg font-extrabold mt-2">(+62) 123-321-543</h5>
+          </div>
+          <div class="p-8 bg-pink-50 rounded-lg">
+            <img src="Images/Group 1171275317.png" alt="">
+            <p class="text-[#13131866] text-base mt-8">Email : </p>
+            <h5 class="text-neutral-900 text-lg font-extrabold mt-2">hockeys@support.com</h5>
+          </div>
+          <div class="p-8 bg-blue-50 rounded-lg">
+            <img src="Images/Group 1171275317.png" alt="">
+            <p class="text-[#13131866] text-base mt-8">Location : </p>
+            <h5 class="text-neutral-900 text-lg font-extrabold mt-2">152/1 Mohakhali Wireless Gate</h5>
+          </div>
+
+        </div>
+
+        <!-- form -->
+        <form>
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+            <div class="space-y-4">
+              <p class="text-neutral-900 text-xl font-bold">Your Name</p>
+              <input type="text" name="" placeholder="Enter your full name" id=""
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+            </div>
+            <div class="space-y-4">
+              <p class="text-neutral-900 text-xl font-bold">Your Email</p>
+              <input type="text" name="" placeholder="Enter your email" id=""
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+            </div>
+            <div class="space-y-4">
+              <p class="text-neutral-900 text-xl font-bold">Subject</p>
+              <input type="text" name="" placeholder="Enter your subject" id=""
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+            </div>
+            <div class="space-y-4">
+              <p class="text-neutral-900 text-xl font-bold">Phone Number</p>
+              <input type="text" name="" placeholder="Enter your phone number" id=""
+                class="bg-slate-100 rounded-lg py-5 pl-5 pr-36">
+            </div>
+          </div>
+          <div class="space-y-4 ">
+            <p class="text-neutral-900 text-xl font-bold">Message</p>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"
+              class="bg-slate-100 rounded-lg py-5 pl-5 pr-36 w-full  h-auto lg:h-[362px] "></textarea>
+          </div>
+          <button class="bg-hockey-bg px-6 py-4 w-full mt-10 text-white text-xl font-bold rounded-lg">Send
+            Message</button>
+        </form>
+
+
+      </div>
+      <!-- Social Media -->
+      <div class="my-10 bg-[#13131808] rounded-xl py-9 text-center">
+        <h2 class="text-neutral-900 text-2xl font-bold">Social Media</h2>
+        <div class="space-x-6 mt-8">
+          <a href=""><i class="text-2xl fa-brands fa-twitter"></i></a>
+          <a href=""><i class=" text-2xl fa-brands fa-facebook"></i></a>
+          <a href=""><i class=" text-2xl fa-brands fa-instagram"></i></a>
+          <a href=""><i class=" text-2xl fa-brands fa-github"></i></a>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer>
-
+  <!-- footer section -->
+  <footer class="footer px-20 py-20  bg-neutral-900 ">
+    <div class="">
+      <h2 class="text-3xl  text-white font-bold">Get In Touch</h2>
+      <p class="text-[#FFFFFFCC]  my-6 lg:w-[346px] text-base font-medium">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <p class="space-x-3">
+        <i class="text-text-color fa-regular fa-envelope"></i>
+        <span class="text-[#FFFFFFCC] font-medium text-base">hockeys@support.com</span>
+      </p>
+      <p class="space-x-3">
+        <i class="text-text-color fa-regular fa-phone"></i>
+        <span class="text-[#FFFFFFCC] font-medium text-base">hockeys@support.com</span>
+      </p>
+    </div>
+    <nav>
+      <header class="text-lg font-bold text-white">Company</header> 
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">About Us</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Leadership</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Careers</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">News & Articles</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Legal Notice</a>
+    </nav> 
+    <nav>
+      <header class="text-lg font-bold text-white">Support</header> 
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Help Center</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">FAQ </a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Ticket Support </a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Contact Us</a>
+    </nav> 
+    <nav>
+      <header class="text-lg font-bold text-white">Services</header> 
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Academy</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]"> Group Lesson</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Private Lesson</a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for kids </a>
+      <a class="link link-hover text-base font-medium text-[#FFFFFFCC]">Hockeys for Adult</a>
+    </nav>
   </footer>
 </body>
 
