--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <img src="Images/1.png" class="w-full " />
           <div
             class="justify-center lg:justify-start absolute gap-4  flex transform -translate-y-1/2 left-10 right-5 bottom-2 lg:bottom-10">
-            <a href="#slide3" class="btn btn-circle bg-neutral-900 border-none  text-white">❮</a>
+            <a href="#slide3g" class="btn btn-circle bg-neutral-900 border-none  text-white">❮</a>
             <a href="#slide2" class="btn btn-circle bg-neutral-900 border-none  text-white">❯</a>
 
           </div>
